Document Mechanism has been fixed, delete document added, fixes on the authorization and access management